--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head> 
-
+<meta charset="utf-8">
+<link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+<script type="text/Javascript" src="js/scipt.js">
 </body>
 </html>
