--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
-<script type="text/Javascript" src="js/scipt.js">
+<script type="text/Javascript" src="js/underscore-min.js"></script>
+<script type="text/Javascript" src="js/scipt.js"></script>
 </body>
 </html>
