creation id et variables correspondantes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<main> 
+<form>
+<input id="nom"> </input>
+<input id="prenom"> </input>
+<input id="numero"> </input>
 
+<button id="add">Ajouter</button>
+</form>
+</main>
 <script type="text/Javascript" src="js/underscore-min.js"></script>
 <script type="text/Javascript" src="js/scipt.js"></script>
 </body>
