ajout div resultat et variable

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <button id="add">Ajouter</button>
 </form>
+<div id="affichage"></div>
 </main>
 <script type="text/Javascript" src="js/underscore-min.js"></script>
 <script type="text/Javascript" src="js/scipt.js"></script>
