--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head> 
-<meta charset="utf-8">
-<link type="text/css" rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<main> 
-<form>
-<input id="nom"> </input>
-<input id="prenom"> </input>
-<input id="numero"> </input>
 
-<button id="add">Ajouter</button>
-</form>
-<div id="affichage"></div>
-</main>
-<script type="text/Javascript" src="js/underscore-min.js"></script>
-<script type="text/Javascript" src="js/scipt.js"></script>
-</body>
+	<head> 
+	<meta charset="utf-8">
+	<link type="text/css" rel="stylesheet" href="css/style.css">
+	<title> Agenda </title>
+	</head>
+
+	<body>
+		<main> 
+			<form>
+				<input id="nom"> </input>
+				<input id="prenom"> </input>
+				<input id="numero"> </input>
+
+				<button id="add">Ajouter</button>
+			</form>
+			<ul id="liste"></div>
+		</main>
+	<script type="text/Javascript" src="js/underscore-min.js"></script>
+	<script type="text/Javascript" src="js/script.js"></script>
+	</body>
 </html>
