virage de form, ajout recherche

--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
 
 	<body>
 		<main> 
-			<form>
-				<input id="nom"> </input>
-				<input id="prenom"> </input>
-				<input id="numero"> </input>
+      <div>
+				<input id="nom">
+				<input id="prenom">
+				<input id="numero">
 
 				<button id="add">Ajouter</button>
-			</form>
-			<ul id="liste"></div>
+				<ul id="liste"></ul>
+      </div>
+			<div>
+				<input id"recherche">
+				<button id="rechercher">rechercher!<button>
+				<ul id="found">
+				</ul>
+			</div>
 		</main>
-	<script type="text/Javascript" src="js/underscore-min.js"></script>
-	<script type="text/Javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/underscore-min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
