finalisation recherche et modif html"

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<ul id="liste"></ul>
       </div>
 			<div>
-				<input id"recherche">
-				<button id="rechercher">rechercher!<button>
+				<input id="recherche">
+				<button id="rechercher">rechercher!</button>
 				<ul id="found">
 				</ul>
 			</div>
